--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,17 @@
       name="viewport"
       content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"
     />
-    <link rel="stylesheet" href="http://at.alicdn.com/t/c/font_3846513_lbf91cmhnz.css"></link>
+    <link
+      rel="stylesheet"
+      href="http://at.alicdn.com/t/c/font_3846513_lbf91cmhnz.css"
+    />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+    />
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
     <title>travel</title>
   </head>
